<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.oooops</groupId>
  <artifactId>sigma</artifactId>
  <version>0.1.0-alpha</version>

  <description>A high performances API gateway based on Vertx(Netty), can execute on native image.</description>
  <url>https://www.oooops.net</url>

  <developers>
    <developer>
      <id>main</id>
      <name>Easonlyo</name>
      <url />
      <roles>
        <role>Project Manager</role>
        <role>Architect</role>
      </roles>
      <organization>no</organization>
      <organizationUrl>null</organizationUrl>
      <properties>
        <dept>No</dept>
      </properties>
      <timezone>+8</timezone>
    </developer>
  </developers>
  <contributors>
    <contributor>
      <name />
      <email />
      <url />
      <organization />
      <organizationUrl />
      <roles />
      <timezone />
      <properties />
    </contributor>
  </contributors>

  <licenses>
    <license>
      <name>Apache 2</name>
      <url>https://www.apache.org/licenses/</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
    <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>

    <vertx.version>4.5.10</vertx.version>
    <junit-jupiter.version>5.9.1</junit-jupiter.version>

    <main.verticle>net.oooops.sigma.Sigma</main.verticle>
    <launcher.class>net.oooops.sigma.MainLauncher</launcher.class>
    <!--vertx-->

    <graal.version>21.2.0</graal.version>
    <graal.plugin.version>0.10.2</graal.plugin.version>
    <vertx.plugin.version>1.0.22</vertx.plugin.version>
    <failsafe.plugin.version>2.22.2</failsafe.plugin.version>
  </properties>

  <profiles>
    <profile>
      <id>native</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>${graal.plugin.version}</version>   <!--(1)-->
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>compile-no-fork</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
            <configuration>
              <skip>false</skip>
              <imageName>${project.name}</imageName>    <!--(2)-->
              <mainClass>${launcher.class}</mainClass>  <!--(3)-->
              <fallback>false</fallback>
              <buildArgs>
                <buildArg>--no-fallback</buildArg>
                <buildArg>-H:+PrintClassInitialization</buildArg>
                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
<!--                <buildArg>-H:IncludeResources=logback.xml.bak</buildArg>-->
              </buildArgs> <!--(4)-->
<!--              <outputDirectory>${project.build.directory}/binary/</outputDirectory>-->
              <outputDirectory>${project.basedir}/</outputDirectory>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>linux</id>
      <activation>
        <os>
          <family>linux</family>
          <arch>x86_64</arch>
        </os>
      </activation>
      <dependencies>
        <dependency>
          <groupId>io.netty</groupId>
          <artifactId>netty-transport-native-epoll</artifactId>
          <classifier>linux-x86_64</classifier>
          <!--<version>Should align with netty version that Vert.x uses</version>-->
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>mac-intel</id>
      <activation>
        <os>
          <family>mac</family>
          <arch>x86_64</arch>
        </os>
      </activation>
      <dependencies>
        <dependency>
          <groupId>io.netty</groupId>
          <artifactId>netty-resolver-dns-native-macos</artifactId>
          <classifier>osx-x86_64</classifier>
          <!--<version>Should align with netty version that Vert.x uses</version>-->
        </dependency>
        <dependency>
          <groupId>io.netty</groupId>
          <artifactId>netty-transport-native-kqueue</artifactId>
          <classifier>osx-x86_64</classifier>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>mac-silicon</id>
      <activation>
        <os>
          <family>mac</family>
          <arch>aarch64</arch>
        </os>
      </activation>
      <dependencies>
        <dependency>
          <groupId>io.netty</groupId>
          <artifactId>netty-resolver-dns-native-macos</artifactId>
          <classifier>osx-aarch_64</classifier>
          <!--<version>Should align with netty version that Vert.x uses</version>-->
        </dependency>
        <dependency>
          <groupId>io.netty</groupId>
          <artifactId>netty-transport-native-kqueue</artifactId>
          <classifier>osx-aarch_64</classifier>
          <!--<version>Should align with netty version that Vert.x uses</version>-->
        </dependency>
      </dependencies>
    </profile>
  </profiles>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-stack-depchain</artifactId>
        <version>${vertx.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!--日志 slf4j + logback-->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.13</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.7</version>
    </dependency>
    <!--http reverse proxy-->
    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-web-proxy</artifactId>
    </dependency>
    <!--cluster-->
    <!--<dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-hazelcast</artifactId>
    </dependency>-->
    <!--yaml-->
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>2.2</version>
    </dependency>
    <!--json-->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>
    <!--linux high I/O performance scalable interface for fully asynchronous Linux sys calls: io_uring: https://vertx.io/docs/vertx-io_uring-incubator/java/ -->
    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-io_uring-incubator</artifactId>
    </dependency>
    <!--Native BSD Transport: https://vertx.io/docs/vertx-core/java/#_native_transports -->
    <!--Native Transport: https://netty.io/wiki/native-transports.html-->
    <dependency>
      <groupId>org.graalvm.sdk</groupId>
      <artifactId>graal-sdk</artifactId>
      <version>24.0.2</version>
    </dependency>
    <!-- rate limit -->
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>33.2.1-jre</version>
    </dependency>
    <!--Test-->
    <dependency>
      <groupId>io.vertx</groupId>
      <artifactId>vertx-junit5</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit-jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit-jupiter.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <release>21</release>
          <source>21</source>
          <target>21</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <version>${maven-shade-plugin.version}</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer
                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <manifestEntries>
                    <Main-Class>${launcher.class}</Main-Class>
                    <Main-Verticle>${main.verticle}</Main-Verticle>
                  </manifestEntries>
                </transformer>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
              </transformers>
              <outputFile>${project.build.directory}/${project.artifactId}-v${project.version}-fat.jar
              </outputFile>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>${exec-maven-plugin.version}</version>
        <configuration>
          <mainClass>${launcher.class}</mainClass>
          <arguments>
            <argument>run</argument>
            <argument>${main.verticle}</argument>
          </arguments>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${failsafe.plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
